<?php

namespace App\Dto\Vehicles;

final class TruckDto extends VehicleDto
{}
