@startuml

title
Cхема связей для "Customer"
end title

left header
Haulk BS
endheader

skinparam class {
    BackgroundColor Wheat
    BorderColor Black
}

skinparam stereotypeCBackgroundColor DimGray

package Domain #7ad378 {

    class Customer <<(M,#7ad378)>> #tomato {}

    class Address <<(E,#7ad378)>> {}
    class CustomerTaxExemption <<(E,#7ad378)>> {}
}
class User {}
class Truck {}
class Trailer {}
class OrderParts {}

Customer -up--{ Address : addresses()
Customer -left--> CustomerTaxExemption : taxExemption()

Customer -right--> User : salesManager()
Customer -down--{ Truck : trucks()
Customer -down--{ Trailer : trailers()
Customer -down--{ OrderParts : partOrders()

@enduml

